--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@metamask/providers": "^18.3.1",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -47,6 +48,7 @@
     "framer-motion": "^12.0.0",
     "geist": "1.1.0~",
     "jotai": "^2.11.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "^15.1.5",
     "next-auth": "^5.0.0-beta.25",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@types/dom-speech-recognition": "^0.0.4",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
